--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type="button" value="sin" id="sin" />
         <input type="button" value="cos" id="cos" />
         <input type="button" value="tan" id="tan" />
-        <input type="button" value="pie" id="pi" />
+        <input type="button" value="π" id="pi" />
         <input type="button" value="e" id="e" />
         <input type="button" value="log" id="log" />
       </div>
