--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scientific Calculator</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
-      rel="stylesheet"
-    />
+
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,6 +17,8 @@
       <div class="buttons">
         <input type="button" value="AC" id="clear" />
         <input type="button" value="Erase" id="erase" />
+        <input type="button" value="D→B" id="dec-binary" />
+        <input type="button" value="B→D" id="binary-dec" />
         <input type="button" value="1" class="input-button" />
         <input type="button" value="2" class="input-button" />
         <input type="button" value="3" class="input-button" />
@@ -38,18 +39,20 @@
         <input type="button" value="%" class="input-button" id="percent" />
         <input type="button" value="=" id="equal" />
 
-        <input type="button" value="x^y" id="pow" />
+        <input type="button" value="x^2" id="pow" />
         <input type="button" value="sin" id="sin" />
         <input type="button" value="cos" id="cos" />
         <input type="button" value="tan" id="tan" />
         <input type="button" value="π" id="pi" />
         <input type="button" value="e" id="e" />
         <input type="button" value="log" id="log" />
+        <input type="button" value="&" id="bitwise" />
+        <input type="button" value="|" id="bitwise" />
+        <input type="button" value="^" id="bitwise" />
+        <input type="button" value="~" id="bitwise" />
       </div>
     </div>
 
     <script src="script.js"></script>
   </body>
 </html>
-
-<!--IEEDIT KO PA DESIGN NITO LEGITNESS FROM MANUEL--> 
