--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
       <div class="buttons">
         <input type="button" value="AC" id="clear" />
-        <input type="button" value="Erase" id="erase" />
-        <input type="button" value="D→B" id="dec-binary" />
-        <input type="button" value="B→D" id="binary-dec" />
+        <input type="button" value="⌫" id="backspace" />
+        <input type="button" value="D>B" id="dec-binary" />
+        <input type="button" value="B>D" id="binary-dec" />
         <input type="button" value="1" class="input-button" />
         <input type="button" value="2" class="input-button" />
         <input type="button" value="3" class="input-button" />
