--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="buttons">
         <input type="button" value="AC" id="clear" />
         <input type="button" value="⌫" id="backspace" />
-        <input type="button" value="D>B" id="dec-binary" />
-        <input type="button" value="B>D" id="binary-dec" />
+        <input type="button" value="D⇔B" id="dec-binary" />
+        <input type="button" value="sqrt" id="square root" />
         <input type="button" value="1" class="input-button" />
         <input type="button" value="2" class="input-button" />
         <input type="button" value="3" class="input-button" />
