--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scientific Calculator</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div class="calculator">
       <div class="display">
         <input type="text" placeholder="0" id="input" disabled />
       </div>
+
       <div class="buttons">
         <input type="button" value="AC" id="clear" />
         <input type="button" value="⌫" id="backspace" />
         <input type="button" value="D⇔B" id="dec-binary" />
-        <input type="button" value="sqrt" id="square root" />
+        <input type="button" value="sqrt" id="square-root" />
         <input type="button" value="1" class="input-button" />
         <input type="button" value="2" class="input-button" />
         <input type="button" value="3" class="input-button" />
@@ -39,17 +44,17 @@
         <input type="button" value="%" class="input-button" id="percent" />
         <input type="button" value="=" id="equal" />
 
-        <input type="button" value="x^2" id="pow" />
+        <input type="button" value="x^y" id="pow" />
         <input type="button" value="sin" id="sin" />
         <input type="button" value="cos" id="cos" />
         <input type="button" value="tan" id="tan" />
         <input type="button" value="π" id="pi" />
         <input type="button" value="e" id="e" />
         <input type="button" value="log" id="log" />
-        <input type="button" value="&" id="bitwise" />
-        <input type="button" value="|" id="bitwise" />
-        <input type="button" value="^" id="bitwise" />
-        <input type="button" value="~" id="bitwise" />
+        <input type="button" value="&" class="input-button" />
+        <input type="button" value="|" class="input-button" />
+        <input type="button" value="^" class="input-button" />
+        <input type="button" value="~" class="input-button" />
       </div>
     </div>
 
